MAINT-1613 Fix "Generate additional english language refset" function.